# rag_faq

./: README.md  requirements.txt
.devcontainer/: devcontainer.json
ques_and_answer/: pyproject.toml
ques_and_answer/backend/: backend.py
ques_and_answer/src/main/connection/large_language_model/: bedrock_llm_connection.py
ques_and_answer/src/main/data/: data_embedding.py  load_data.py
ques_and_answer/src/main/helper/: data_helper.py
ques_and_answer/src/main/services/: index_data.py  rag_response.py
ques_and_answer/src/main/tests/unit/data/: test_load_data.py
ques_and_answer/src/main/ui/: frontend.py
