name = "faq_ai_rag"version = "0.0.1"description = "Retrieval Augmented Generation for Frequently Asked Questions"dependencies = [""][build-system]requires = ["setuptools"]build-backend = "setuptools.build_meta"[faq_ai_rag]readme = "README.md"requires-python = ">=3.12"license = { file = "LICENSE.txt" }keywords = ["faq_ai_rag"]authors = [{ name = "Sumit Kaushik", email = "sumitcomp31@gmail.com" }]maintainers = [{ name = "Sumit Kaushik", email = "sumitcomp31@gmail.com" }]